--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,3 +1,11 @@
+.nav {
+  background-color: darkgoldenrod;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 5px;
+}
+
 .nav a {
   color: yellow;
   text-decoration: none;
@@ -6,6 +14,28 @@
 .nav a:hover,
 .nav a:active,
 .nav a.active {
+  color: green;
+  border-bottom: 3px solid #f9e783;
+}
+
+.nav li {
+  margin: 0 10px;
+}
+
+.user-info {
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+  top: 5px;
+}
+
+.user-info a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: blue;
+}
+
+.user-info a:hover {
   color: green;
   border-bottom: 3px solid #f9e783;
 }
