--- a/src/stylesheets/_utilities.scss
+++ b/src/stylesheets/_utilities.scss
@@ -1,4 +1,5 @@
 @import "./mixins";
+@import "./variables";
 
 :root {
   font-size: 62.5%;
@@ -18,11 +19,11 @@ body {
       [col-start] minmax(min-content, 16.25rem) [col-end]
     )
     [center-end] 1fr [container-end];
-  grid-template-rows: min-content 90vh repeat(9, min-content);
+  // grid-template-rows: min-content repeat(auto-fit, min-content);
 
-  @include media-tablet {
-    grid-template-rows: min-content 100vh repeat(9, min-content);
-  }
+  // @include media-tablet {
+  //   grid-template-rows: min-content repeat(auto-fit, min-content);
+  // }
 }
 
 li {
@@ -40,6 +41,7 @@ a:visited {
 }
 
 i {
-  color: var(--color-one);
+  color: var(--color-two);
   font-size: font-size("medium");
+  letter-spacing: 0;
 }
