--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -49,7 +49,8 @@
       transition: all 0.2s ease-in-out;
     }
     a:hover::before,
-    a:active::before {
+    a:active::before,
+    a.active::before {
       transform: scaleY(1);
     }
   }
@@ -148,7 +149,8 @@
           transform-origin: center;
         }
         a:hover::before,
-        a:active::before {
+        a:active::before,
+        a.active::before {
           width: 100%;
         }
       }
