--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -122,18 +122,18 @@
       position: fixed;
       width: 100vw;
       height: 100vh;
-      background-color: var(--color-four-m);
+      background-color: var(--color-two-a);
 
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: auto 1fr;
+      display: flex;
+      flex-direction: column;
       align-items: start;
       justify-content: start;
+      z-index: 9;
 
       .header__nav {
+        height: 100%;
         display: flex;
         flex-direction: column;
-        order: 2;
         justify-self: center;
         align-self: center;
 
@@ -142,6 +142,7 @@
           margin: 0;
           margin-bottom: 2vw;
           border: 0.2rem solid var(--color-three);
+          background-color: var(--color-one);
         }
         a:link::before,
         a:visited::before {
@@ -156,11 +157,50 @@
       }
 
       .header__user-info {
+        position: absolute;
+        right: 5vw;
+        top: 5vw;
         height: min-content;
+        padding: 0 3vw;
         order: 1;
         flex-direction: column;
         align-self: start;
         justify-self: end;
+      }
+    }
+  }
+
+  @include media-medium {
+    &.active {
+      .header__nav {
+        a:link,
+        a:visited {
+          font-size: font-size("medium");
+          padding: 0 1.5rem;
+        }
+      }
+
+      .header__user-info {
+        a:link,
+        a:visited {
+          font-size: font-size("medium");
+          padding: 0 1.5rem;
+        }
+        span {
+          font-size: 2rem;
+        }
+      }
+    }
+  }
+
+  @include media-small {
+    &.active {
+      .header__user-info {
+        place-items: flex-end;
+        span {
+          font-size: 2.5rem;
+          letter-spacing: 0;
+        }
       }
     }
   }
