fix: HeaderButton blends with some sections

--- a/src/components/UI/HeaderButton.module.scss
+++ b/src/components/UI/HeaderButton.module.scss
@@ -10,6 +10,7 @@
   z-index: 10;
   border: 0.5rem solid var(--color-two);
   border-radius: 50%;
+  background-color: var(--color-four-a);
   display: none; // flex
   flex-direction: column;
   justify-content: space-between;
