--- a/src/components/HangMan/Rules.module.scss
+++ b/src/components/HangMan/Rules.module.scss
@@ -25,4 +25,19 @@
       text-shadow: 0.1rem 0.1rem var(--color-four-a);
     }
   }
+
+  @include media-small {
+    padding-top: 12rem;
+
+    h2 {
+      font-size: 3rem;
+      font-weight: font-weight("bold");
+    }
+
+    ul {
+      li {
+        font-size: 1.8rem;
+      }
+    }
+  }
 }
