--- a/src/components/ToDo/Greeting.module.scss
+++ b/src/components/ToDo/Greeting.module.scss
@@ -17,4 +17,17 @@
   p {
     @extend %sec-para;
   }
+
+  @include media-small {
+    h2 {
+      font-size: 2.8rem;
+      font-weight: font-weight("bold");
+      text-align: center;
+    }
+
+    p {
+      font-size: 2rem;
+      text-align: center;
+    }
+  }
 }
