--- a/src/components/ToDo/TasksList.module.scss
+++ b/src/components/ToDo/TasksList.module.scss
@@ -7,4 +7,10 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-three);
+
+  & > p {
+    font-size: font-size("medium");
+    text-align: center;
+    color: var(--color-five);
+  }
 }
