fix: more adaptive style tweaking

--- a/src/components/UI/HeaderButton.module.scss
+++ b/src/components/UI/HeaderButton.module.scss
@@ -44,6 +44,11 @@
   @include media-tablet {
     & {
       display: flex;
+
+      top: calc(2rem + 2vw);
+      left: calc(2rem + 2vw);
+      width: calc(4rem + 4vw);
+      height: calc(4rem + 4vw);
     }
   }
 }
