--- a/src/components/HangMan/Rules.module.scss
+++ b/src/components/HangMan/Rules.module.scss
@@ -4,10 +4,12 @@
 .rules {
   grid-column: container-start / container-end;
   @extend %sec-padding;
+  height: 60vh;
   background-color: var(--color-five);
 
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
 
   h2 {
     @extend %sec-heading;
@@ -26,12 +28,21 @@
     }
   }
 
+  @include media-medium {
+    height: 75vh;
+
+    h2 {
+      font-weight: font-weight("bold");
+    }
+  }
+
   @include media-small {
-    padding-top: 12rem;
+    height: auto;
+    min-height: 100vh;
+    padding-top: 10rem;
 
     h2 {
       font-size: 3rem;
-      font-weight: font-weight("bold");
     }
 
     ul {
