--- a/src/components/Portfolio/PortfolioWelcome.module.scss
+++ b/src/components/Portfolio/PortfolioWelcome.module.scss
@@ -6,7 +6,7 @@
   // background-image: url("");
   background-color: white;
   @extend %sec-padding;
-  height: 90vh;
+  height: calc(100vh - 3rem - 1vw);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -18,6 +18,7 @@
   }
   .para {
     @extend %sec-para;
+    font-size: font-size("medium");
   }
   .title,
   .para {
@@ -37,7 +38,7 @@
       i {
         height: inherit;
         display: block;
-        font-size: calc(1rem + 3vw);
+        font-size: calc(6rem + 1vw);
         border-radius: 50%;
         overflow: hidden;
       }
@@ -50,16 +51,32 @@
     }
   }
 
-  @include media-small {
-    height: 60vh;
+  @include media-tablet {
+    height: 100vh;
 
+    .title {
+      font-size: font-size("xlarge");
+    }
+  }
+
+  @include media-medium {
+    height: 55vh;
+
+    h1,
+    p {
+      align-self: center;
+      text-align: center;
+    }
+  }
+
+  @include media-small {
     .social {
       padding: 1vw;
 
       a:link,
       a:visited {
         i {
-          font-size: 4rem;
+          font-size: 6rem;
         }
       }
     }
