--- a/src/components/ToDo/Greeting.module.scss
+++ b/src/components/ToDo/Greeting.module.scss
@@ -18,6 +18,21 @@
     @extend %sec-para;
   }
 
+  @include media-tablet {
+    height: 60vh;
+
+    h2,
+    p {
+      text-align: center;
+    }
+    h2 {
+      font-size: font-size("large");
+    }
+    p {
+      font-size: font-size("medium");
+    }
+  }
+
   @include media-small {
     h2 {
       font-size: 2.8rem;
