--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -62,7 +62,7 @@ $screen-sizes: (
 
 // CUSTOM TEXT SELECTION ..........
 ::selection {
-  background-color: var(--color-first);
+  background-color: var(--color-one-a);
   opacity: 0.5;
 }
 
