--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -13,14 +13,14 @@ html {
 }
 
 html[data-theme="dark"] {
-  --color-one: #a5b1c2;
-  --color-one-a: #a5b1c393;
-  --color-two: #3867d6;
-  --color-two-a: #3867d693;
-  --color-three: #2d98da;
-  --color-three-a: #2d98d999;
-  --color-four: #8854d0;
-  --color-four-a: #8854d09a;
+  --color-one: #3e1414;
+  --color-one-a: #3e141493;
+  --color-two: #2796e0;
+  --color-two-a: #2796e093;
+  --color-three: #01767e;
+  --color-three-a: #01767e99;
+  --color-four: #a93ca9;
+  --color-four-a: #a93ca99a;
   --color-five: white;
   --color-five-a: rgba(255, 255, 255, 0.5);
 }
