--- a/src/components/ToDo/Greeting.module.scss
+++ b/src/components/ToDo/Greeting.module.scss
@@ -5,7 +5,7 @@
   grid-column: container-start / container-end;
   @extend %sec-padding;
   height: 50vh;
-  background-image: linear-gradient(var(--color-two-a), var(--color-five-a)),
+  background-image: linear-gradient(var(--color-two-a), var(--color-one-a)),
     url("../../../public/img/todo/todo-bg.png");
   @extend %bg;
 
