--- a/src/components/HangMan/LetterInput.module.scss
+++ b/src/components/HangMan/LetterInput.module.scss
@@ -3,7 +3,7 @@
 
 .letter-input {
   grid-column: center-start / center-end;
-  @extend %sec-padding;
+  padding: 3vh 0;
 
   form {
     width: 100%;
