--- a/src/components/HangMan/Rules.module.scss
+++ b/src/components/HangMan/Rules.module.scss
@@ -4,7 +4,6 @@
 .rules {
   grid-column: container-start / container-end;
   @extend %sec-padding;
-  height: 60vh;
   background-image: linear-gradient(var(--color-two-a), var(--color-one-a)),
     url("../../../public/img/hangman/hangman-bg.png");
   @extend %bg;
@@ -28,6 +27,10 @@
       list-style: circle;
       text-shadow: 0.1rem 0.1rem var(--color-four-a);
     }
+  }
+
+  @include media-tablet {
+    height: 60vh;
   }
 
   @include media-medium {
