--- a/src/components/Portfolio/PortfolioAboutMe.module.scss
+++ b/src/components/Portfolio/PortfolioAboutMe.module.scss
@@ -2,11 +2,12 @@
 @import "../../stylesheets/mixins";
 
 .about-me_image {
+  position: relative;
+  z-index: 1;
   grid-column: container-start / col-end 2;
   height: 55vh;
   @extend %bg;
-  background-image: linear-gradient(var(--color-four-a), var(--color-two-a)),
-    url("../../../public/img/portfolio/bg-01.png");
+  background-image: url("../../../public/img/portfolio/bg-01.png");
 
   @include media-medium {
     display: none;
@@ -14,13 +15,25 @@
 }
 
 .about-me_content {
+  position: relative;
+  z-index: 1;
   grid-column: col-start 3 / container-end;
   height: 55vh;
-  background-color: var(--color-five);
+  background-color: var(--color-five-a);
   padding: 4vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  .backdrop {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    backdrop-filter: none;
+  }
 
   label,
   p {
@@ -61,11 +74,14 @@
     grid-column: center-start / center-end;
     height: auto;
     background: none;
-    background-image: linear-gradient(var(--color-four-a), var(--color-two-a)),
-      url("../../../public/img/portfolio/bg-01.png");
+    background-image: url("../../../public/img/portfolio/bg-01.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    .backdrop {
+      backdrop-filter: brightness(0.7);
+    }
 
     label {
       width: 100%;
