--- a/src/components/Portfolio/PortfolioWelcome.module.scss
+++ b/src/components/Portfolio/PortfolioWelcome.module.scss
@@ -11,6 +11,18 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-end;
+  position: relative;
+  z-index: 1;
+
+  .backdrop {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: brightness(0.5);
+    z-index: -1;
+  }
 
   .title {
     font-size: font-size("large");
