--- a/src/components/Portfolio/PortfolioAboutMe.module.scss
+++ b/src/components/Portfolio/PortfolioAboutMe.module.scss
@@ -53,6 +53,11 @@
     font-family: "Roboto", cursive;
     word-wrap: break-word;
   }
+  .email {
+    p {
+      display: inline;
+    }
+  }
 
   .para {
   }
@@ -93,6 +98,14 @@
       font-size: font-size("medium");
       color: var(--color-two);
       text-shadow: 0.1rem 0.1rem 0.2rem var(--color-five);
+    }
+  }
+
+  @include media-small {
+    .email {
+      p {
+        display: block;
+      }
     }
   }
 }
