--- a/src/components/UI/HeaderButton.module.scss
+++ b/src/components/UI/HeaderButton.module.scss
@@ -2,25 +2,32 @@
 @import "../../stylesheets/mixins";
 
 .header-btn {
+  --size: calc(5vw + 5vh);
+
+  // do not change
+  --margin: calc(0.5 * var(--size));
+  --line: calc((var(--size) / 16));
+  --padding: calc(0.25 * var(--margin) + var(--line));
+
   position: fixed;
-  top: 4rem;
-  left: 4rem;
-  width: 7rem;
-  height: 7rem;
+  top: var(--margin);
+  left: var(--margin);
+  width: var(--size);
+  height: var(--size);
+  padding: var(--padding);
   z-index: 10;
-  border: 0.5rem solid var(--color-two);
+  border: var(--line) solid var(--color-two);
   border-radius: 50%;
   background-color: var(--color-four-a);
   display: none; // flex
   flex-direction: column;
   justify-content: space-between;
-  padding: 1rem;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 
   div {
     width: 100%;
-    height: 0.5rem;
+    height: var(--line);
     background-color: var(--color-two);
     transition: all 0.3s ease-in-out;
   }
@@ -33,22 +40,19 @@
     }
     div:first-child {
       transform-origin: center;
-      transform: translateY(1.75rem) rotate(45deg);
+      transform: translateY(calc(0.25 * var(--size) - var(--line) / 2))
+        rotate(45deg);
     }
     div:last-child {
       transform-origin: center;
-      transform: translateY(-1.75rem) rotate(-45deg);
+      transform: translateY(calc(-0.25 * var(--size) + var(--line) / 2))
+        rotate(-45deg);
     }
   }
 
   @include media-tablet {
     & {
       display: flex;
-
-      top: calc(2rem + 2vw);
-      left: calc(2rem + 2vw);
-      width: calc(4rem + 4vw);
-      height: calc(4rem + 4vw);
     }
   }
 }
