hotfix: HeaderButton lines are invisible

--- a/src/components/UI/HeaderButton.module.scss
+++ b/src/components/UI/HeaderButton.module.scss
@@ -6,7 +6,7 @@
 
   // do not change
   --margin: calc(0.5 * var(--size));
-  --line: calc((var(--size) / 16));
+  --line: calc(var(--size) / 16);
   --padding: calc(0.25 * var(--margin) + var(--line));
 
   position: fixed;
