--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -162,8 +162,8 @@
 
       display: flex;
       flex-direction: column;
-      align-items: start;
-      justify-content: start;
+      align-items: flex-start;
+      justify-content: flex-start;
       z-index: 9;
 
       .header__nav {
@@ -200,7 +200,7 @@
         padding: 0 3vw;
         order: 1;
         flex-direction: column;
-        align-self: start;
+        align-self: flex-start;
         justify-self: end;
       }
     }
