fix: font awesome dependencies

--- a/src/components/Portfolio/PortfolioMyExperience.module.scss
+++ b/src/components/Portfolio/PortfolioMyExperience.module.scss
@@ -58,7 +58,7 @@
         align-items: center;
         width: calc(50% + 1.5rem);
 
-        i {
+        svg {
           color: var(--color-five);
           font-size: 5rem;
         }
